fixed text alignment to center

--- a/6.4 Motivation Meme Project/style.css
+++ b/6.4 Motivation Meme Project/style.css
@@ -11,6 +11,7 @@ h1{
     font-weight: 400;
     font-style: normal;
     color:white;
+    text-align: center;
 }
 
 img{
